[tool.poetry]
name = "smart driver"
version = "0.1.0"
description = "smart driver"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_docs", "nonebot_plugin_gocqhttp", "nonebot_plugin_hammer_nbnhhsh", "nonebot_plugin_admin"]
plugin_dirs = ["plg"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
